--- a/styles/index.scss
+++ b/styles/index.scss
@@ -84,7 +84,7 @@ h4 {
 }
 
 p {
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 strong {
@@ -120,4 +120,8 @@ img {
 
 em {
   font-style: italic;
+}
+
+hr {
+  margin-bottom: 2rem;
 }
