--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,9 +10,6 @@ body {
   line-height: 1.5;
   font-family: "Roboto", sans-serif;
   padding-top: 3rem;
-}
-
-body {
   margin-left: auto;
   margin-right: auto;
   max-width: 42rem;
@@ -20,7 +17,7 @@ body {
 }
 
 header {
-  margin: 2rem 0rem;
+  line-height: 100px;
 }
 
 nav {
@@ -29,7 +26,7 @@ nav {
 }
 
 nav h1,
-nav h3 {
+nav span {
   flex: 0 0 50%;
   max-width: 50%;
 }
@@ -51,6 +48,10 @@ nav ul li {
 
 section {
   margin-bottom: 2rem;
+}
+
+article h1 {
+  margin-bottom: 1rem;
 }
 
 h1,
@@ -122,39 +123,48 @@ em {
   font-style: italic;
 }
 
+small {
+  font-size: 12px;
+}
+
 hr {
+  opacity: 0.2;
   margin-bottom: 2rem;
 }
 
-form {
-  input {
-    width: 100%;
-    max-width: 500px;
-    height: 50px;
-    line-height: 50px;
-    box-shadow: 0;
-    outline: 0;
-    border-radius: 0;
-    border: 2px solid #f2f2f2;
-    border-radius: 5px;
-    background-color: transparent;
-    color: #f2f2f2;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-bottom: 10px;
-  }
+form input {
+  width: 100%;
+  max-width: 300px;
+  line-height: 46px;
+  padding: 0 10px;
+  box-shadow: 0;
+  outline: 0;
+  border-radius: 0;
+  border: 2px solid #f2f2f2;
+  background-color: transparent;
+  color: #f2f2f2;
+  display: inline-block;
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
 
-  button {
-    width: 100%;
-    max-width: 300px;
-    height: 50px;
-    line-height: 50px;
-    box-shadow: 0;
-    outline: 0;
-    border-radius: 0;
-    border: 2px solid #f2f2f2;
-    border-radius: 5px;
-    background-color: transparent;
-    color: #f2f2f2;
-  }
+form button {
+  width: 100%;
+  max-width: 100px;
+  height: 50px;
+  box-shadow: 0;
+  outline: 0;
+  border-radius: 0;
+  border: 2px solid #f2f2f2;
+  border-radius: 5px;
+  background-color: transparent;
+  color: #f2f2f2;
+  display: inline-block;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+form button:hover {
+  background-color: #f2f2f2;
+  color: #282c35;
 }
